@@ -1,3 +1,7 @@
+2019-04-06 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Reverse order of previous functions, units, and variables in button menus
+
 2019-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Hide optional arguments with default value
